# precast

./: .gitignore  LICENSE  README.md  pyproject.toml
precast_core/: __main__.py
precast_core/cli/: __init__.py  precast_cli.py
precast_core/patterns/factories/: component.py
precast_core/services/: code_generator.py  file_manager.py  template.py
precast_core/templates/: init.json  main.py  router.py
precast_core/validators/: components.py
tests/integration/: test_cli.py
tests/snapshots/: init.json
tests/snapshots/components/: all_components.json  with_an_api_components.json
tests/snapshots/fake_app/: main.py  precast.json
tests/unit/: test_cli.py  test_code_generator.py  test_file_manager.py  test_service_templates.py
