[tool.poetry]
name = "precast-core"
version = "0.0.1"
description = "A CLI tool to speed up project creation"
authors = ["Vinicio Schmidt <schmidtvinicio@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-watch = "^4.2.0"
pyclean = "^3.0.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
